<resources>
    <string name="app_name">VK Mobile</string>
    <integer name="com_vk_sdk_AppId">5906061</integer>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="action_sign_in_short">Sign in with VK</string>
    <string name="user_token">User token:</string>
    <string name="logged_out">Logged out</string>
    <string name="logged_in">Logged in</string>
    <string name="progDialTitle">Please, wait</string>
    <string name="progDialMsg">Newsfeed loading...</string>
    <string name="text_null">Text field is empty</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="page_title">"Photo "</string>
    <string name="cant_receive_data">We can not receive new data</string>
    <string name="comments">Comments</string>
    <string name="label_share">Share</string>
    <string name="likes">Likes</string>
    <string name="label_postponed_post">Postponed post</string>
    <string name="massages">Massages</string>
    <string name="friends">Friends</string>
    <string name="communities">Communities</string>
    <string name="photos">Photos</string>
    <string name="videos">Videos</string>
    <string name="music">Music</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="setting">Setting</string>
    <string name="search">Search</string>
</resources>
